bezig met routes

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,6 +1,6 @@
 
 <div class="jumbotron text-center">
-        <h1>Login pagina</h1>
+        <h1>Home</h1>
 
         <p>{{ message }}</p>
     </div>
