--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                <li><a href="#login"><i class="fa fa-shield"></i> Inloggen</a></li>
+                <li><a href="#inlogform"><i class="fa fa-shield"></i> Inloggen</a></li>
                 <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
             </ul>
         </div>
@@ -33,9 +33,8 @@
 
   <div id="main">
 
-    <p>Hier worden de templates geladen</p>
-
-    {{ message }}
+    <!-- content injecteren -->
+    <div ng-view></div>
 
   </div>
     
