--- a/public/pages/contact.html
+++ b/public/pages/contact.html
@@ -1,6 +1,6 @@
 
     <div class="jumbotron text-center">
-        <h1>Contact Page</h1>
+        <h1>Contact</h1>
 
         <p>{{ message }}</p>
     </div>
