--- a/public/index.html
+++ b/public/index.html
@@ -9,12 +9,12 @@
 <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 <link rel="shortcut icon" href="">
 
-<script src="angular.js"></script>
-<script src="angular-route.js"></script>
-<script src="angular-resource.js"></script>
+<script src="angular/angular.js"></script>
+<script src="angular/angular-route.js"></script>
+<script src="angular/angular-resource.js"></script>
 <script src="script.js"></script>
-<script src="jquery-2.1.4.js"></script>
-<script src="slideshow.js"></script>
+<script src="jquery/jquery-2.1.4.js"></script>
+<script src="jquery/slideshow.js"></script>
   
 <html ng-app="travelApp">
 </head>
