--- a/public/index.html
+++ b/public/index.html
@@ -2,17 +2,22 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
-<title>Project</title>
+<title>Travel Project</title>
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
 <meta name="viewport"  content="initial-scale=1, width=device-width">
 <link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 <link rel="shortcut icon" href="">
 
+<!-- Angular scripts -->
 <script src="angular/angular.js"></script>
 <script src="angular/angular-route.js"></script>
 <script src="angular/angular-resource.js"></script>
-<script src="script.js"></script>
+
+<!-- angular views en directives -->
+<script src="js/app.js"></script>
+
+<!-- jquery scripts, voor slideshow -->
 <script src="jquery/jquery-2.1.4.js"></script>
 <script src="jquery/slideshow.js"></script>
   
@@ -23,7 +28,6 @@
   <div class="container-fluid">
     <header>
         <div id="slideshow">
-            <p>slideshow</p>
             <img src="images/img1.jpg" width="100%" alt="" class="active" />
             <img src="images/img2.jpg" width="100%" alt="" />
         </div>
