--- a/public/pages/inlogform.html
+++ b/public/pages/inlogform.html
@@ -3,4 +3,18 @@
         <h1>Login pagina</h1>
 
         <p>{{ message }}</p>
+
+        <form>
+		  <div class="form-group">
+		    <label for="email">Email adres</label>
+		    <input type="email" class="form-control" id="email" placeholder="Email">
+		  </div>
+		  <div class="form-group">
+		    <label for="password">Password</label>
+		    <input type="password" class="form-control" id="password" placeholder="Password">
+		  </div>
+		  <button type="submit" class="btn btn-default" ng-click="registreren()">Registreren</button>
+		</form>
+
+
     </div>
