--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="travelApp">
 <head>
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 <title>Travel Project</title>
@@ -17,11 +17,13 @@
 <!-- angular views en directives -->
 <script src="js/app.js"></script>
 
+<script src="controllers/mainController.js"></script>
+
+
 <!-- jquery scripts, voor slideshow -->
 <script src="jquery/jquery-2.1.4.js"></script>
 <script src="jquery/slideshow.js"></script>
-  
-<html ng-app="travelApp">
+
 </head>
 <body ng-controller="mainController">
 
