--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,8 @@
   <div class="container-fluid">
     <header>
         <div id="slideshow">
-            <img src="images/img1.jpg" width="100%" alt="" class="active" />
-            <img src="images/img2.jpg" width="100%" alt="" />
+            <img src="images/img1.png" width="100%" height="100%" alt="" class="active" />
+            <img src="images/img2.png" width="100%" height="100%" alt="" />
         </div>
 
         <nav class="navbar navbar-default">
