--- a/public/pages/inlogform.html
+++ b/public/pages/inlogform.html
@@ -6,12 +6,12 @@
 
         <form>
 		  <div class="form-group">
-		    <label for="email">Username</label>
-		    <input type="text" name="username" class="form-control" id="username" placeholder="Username" ng-model="username">
+		    <label for="username">Username</label>
+		    <input type="text" ng-model="username">
 		  </div>
 		  <div class="form-group">
 		    <label for="password">Password</label>
-		    <input type="password" name="password" class="form-control" id="password" placeholder="Password" ng-model="password">
+		    <input type="text" ng-model="password">
 		  </div>
 		  <button type="submit" class="btn btn-default" ng-click="register()">Registreren</button>
 		</form>
