--- a/public/pages/inlogform.html
+++ b/public/pages/inlogform.html
@@ -7,11 +7,11 @@
         <form>
 		  <div class="form-group">
 		    <label for="username">Username</label>
-		    <input type="text" ng-model="username">
+		    <input type="text" ng-model="data.username">
 		  </div>
 		  <div class="form-group">
 		    <label for="password">Password</label>
-		    <input type="text" ng-model="password">
+		    <input type="text" ng-model="data.password">
 		  </div>
 		  <button type="submit" class="btn btn-default" ng-click="register()">Registreren</button>
 		</form>
