--- a/public/index.html
+++ b/public/index.html
@@ -42,6 +42,7 @@
               <ul class="nav navbar-nav navbar-right">
                   <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
                   <li><a href="#inlogform"><i class="fa fa-shield"></i> Inloggen</a></li>
+                  <li><a href="#landen"><i class="fa fa-comment"></i> Landen</a></li>
                   <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
               </ul>
           </div>
