--- a/public/pages/landen.html
+++ b/public/pages/landen.html
@@ -7,8 +7,16 @@
         <form>
 		  <div class="form-group">
 		    <label for="landen">Landen</label>
-		    <input type="text" ng-model="data.land">
+		    <input type="text" ng-model="landen.land">
 		  </div>
 		  <button type="submit" class="btn btn-default" ng-click="addLand()">Land toevoegen</button>
 		</form>
+
+
+
+		<table class="table">
+		    <tr ng-repeat="land in landen">
+		        <td>{{land.landnaam}}</td><td><button class="btn" ng-click="delete(todo.id)">delete</button></td>
+		    </tr>
+		</table>
     </div>
