bezig met toevoegen landen laden

--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 <script src="js/app.js"></script>
 
 <script src="controllers/mainController.js"></script>
+<script src="controllers/landController.js"></script>
 
 
 <!-- jquery scripts, voor slideshow -->
