--- a/public/index.html
+++ b/public/index.html
@@ -27,43 +27,53 @@
 
 </head>
 <body ng-controller="mainController">
-
   <div class="container-fluid">
-    <header>
-        <div id="slideshow">
-            <img src="images/img1.png" width="100%" height="100%" alt="" class="active" />
-            <img src="images/img2.png" width="100%" height="100%" alt="" />
-        </div>
+      <div class="row">
+          <div class="col-lg-12">
+              <nav class="navbar navbar-default navbar-fixed-top">
+                  <div class="container">
+                      <div class="navbar-header">
+                          <a class="navbar-brand" href="#">Logo</a>
+                      </div>
+                      <ul class="nav navbar-nav navbar-right">
+                          <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                          <li><a href="#inlogform"><i class="fa fa-shield"></i> Inloggen</a></li>
+                          <li><a href="#landen"><i class="fa fa-comment"></i> Landen</a></li>
+                          <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
+                      </ul>
+                  </div>  
+              </nav>
+          </div>    
+      </div>    
+              
+      <div class="row">
+          <div class="col-md-12">
+              <header>
+                  <div id="slideshow">
+                      <img src="images/img1.png" width="100%" height="100%" alt="" class="active" />
+                      <img src="images/img2.png" width="100%" height="100%" alt="" />
+                  </div>
+              </header>
+          </div>  
+      </div>
 
-        <nav class="navbar navbar-default">
-          <div class="container">
-              <div class="navbar-header">
-                  <a class="navbar-brand" href="#">Logo</a>
-              </div>
-              <ul class="nav navbar-nav navbar-right">
-                  <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                  <li><a href="#inlogform"><i class="fa fa-shield"></i> Inloggen</a></li>
-                  <li><a href="#landen"><i class="fa fa-comment"></i> Landen</a></li>
-                  <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
-              </ul>
-          </div>
-        </nav>
-    </header>
-
-    <div id="main">
-
-      <!-- content injecteren -->
-      <div ng-view></div>
-
-    </div>
+      <div class="row">
+          <div class="col-lg-12">
+              <div id="main">
+                  <div ng-view>
+                      <!-- html pagina's worden hier geladen -->
+                  </div>
+              </div>  
+          </div>  
+      </div>
       
-
-    <footer> 
-      <div id="container">
-        <h3>Frank Polman</h3>
-
-      </div>  
-    </footer>
+      <div class="row"> 
+          <div class="col-lg-12">
+              <footer>
+                  <h3>Frank Polman</h3>
+              </footer>
+          </div>         
+      </div>
   </div>  
 </body>
 </html>
