bug tussen laden en toevoegen van landen opgelost.
Beide gebruikte $scope.landen

bij het toevoegen aangepast naar land.naam en dus $scope.land

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,6 +1,26 @@
 
-	<div class="jumbotron text-center">
-        <h1>Home</h1>
-
-        <p>{{ message }}</p>
+	<div class="popTravel text-center">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-12">
+	        		<h1>Home</h1>
+	        	</div>
+	        </div>
+	        <div class="row">
+	        	<div class="col-lg-12">
+	        		<h2>Meest populaire travel bestemmingen</h2>
+	        	</div>
+	        </div>	
+	        <div class="row">		
+	        	<div class="col-lg-4">
+	        		<img src="images/flags/usa.png">
+	        	</div>
+	        	<div class="col-lg-4">
+	        		<img src="images/flags/can.png">
+	        	</div>
+	        	<div class="col-lg-4">
+	        		<img src="images/flags/uk.png">
+	        	</div>
+	        </div>	
+	    </div>    
     </div>
