--- a/public/pages/landen.html
+++ b/public/pages/landen.html
@@ -6,7 +6,7 @@
         <form>
 		  <div class="form-group">
 		    <label for="landen">Landen</label>
-		    <input type="text" ng-model="landen.land">
+		    <input type="text" ng-model="land.naam">
 		  </div>
 		  <button type="submit" class="btn btn-default" ng-click="addLand()">Land toevoegen</button>
 		</form>
