Toevoegen van populairste vakantie bestemmingen op de homepage. Moeten later in het project uit de database gehaald worden

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,25 +1,30 @@
 
 	<div class="popTravel text-center">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-12">
-	        		<h1>Home</h1>
-	        	</div>
-	        </div>
-	        <div class="row">
+	        <div class="row intro-title">
 	        	<div class="col-lg-12">
-	        		<h2>Meest populaire travel bestemmingen</h2>
+	        		<h1 class="smaller">Meest populaire travel bestemmingen</h1>
 	        	</div>
 	        </div>	
 	        <div class="row">		
-	        	<div class="col-lg-4">
+	        	<div class="col-lg-4 steps">
 	        		<img src="images/flags/usa.png">
+	        		<h3>Explore <strong>Amerika</strong></h3>
+
+	        		<hr />
+	        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
 	        	</div>
-	        	<div class="col-lg-4">
+	        	<div class="col-lg-4 populair">
 	        		<img src="images/flags/can.png">
+	        		<h3>Explore <strong>Canada</strong></h3>
+	        		<hr />
+	        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
 	        	</div>
-	        	<div class="col-lg-4">
+	        	<div class="col-lg-4 populair">
 	        		<img src="images/flags/uk.png">
+	        		<h3>Explore <strong>Engeland</strong></h3>
+	        		<hr />
+	        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
 	        	</div>
 	        </div>	
 	    </div>    
