--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,10 @@
 <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 <title>Travel Project</title>
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
+<link type="text/css" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,400,600,300,700">
 <meta name="viewport"  content="initial-scale=1, width=device-width">
-<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="shortcut icon" href="">
 
 <!-- Angular scripts -->
