ronde afbeeldingen topThree landen

--- a/public/pages/landen.html
+++ b/public/pages/landen.html
@@ -14,7 +14,7 @@
 
 		<table class="table">
 		    <tr ng-repeat="land in landen">
-		        <td>{{land.landnaam}}</td><td><button class="btn" ng-click="delete(land.id)">delete</button></td>
+		        <td>{{land.landnaam}}</td><td><button class="submit" ng-click="delete(land.id)">delete</button></td>
 		    </tr>
 		</table>
     </div>
