--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -3,25 +3,25 @@
 		<div class="container">
 	        <div class="row intro-title">
 	        	<div class="col-lg-12">
-	        		<h1 class="smaller">Meest populaire travel bestemmingen</h1>
+	        		<h1 class="smaller">Meest populaire bestemmingen</h1>
 	        	</div>
 	        </div>	
 	        <div class="row">		
-	        	<div class="col-lg-4 steps">
-	        		<img src="images/flags/usa.png">
+	        	<div class="col-lg-4 col-md-4 col-xs-12 topThree">
+	        		<img src="images/circles/amerikaCircle.png" width="275">
 	        		<h3>Explore <strong>Amerika</strong></h3>
 
 	        		<hr />
 	        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
 	        	</div>
-	        	<div class="col-lg-4 populair">
-	        		<img src="images/flags/can.png">
+	        	<div class="col-lg-4 col-md-4 col-xs-12 topThree">
+	        		<img src="images/circles/canadaCircle.png" width="275">
 	        		<h3>Explore <strong>Canada</strong></h3>
 	        		<hr />
 	        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
 	        	</div>
-	        	<div class="col-lg-4 populair">
-	        		<img src="images/flags/uk.png">
+	        	<div class="col-lg-4 col-md-4 col-xs-12 topThree">
+	        		<img src="images/circles/engelandCircle.png" width="275">
 	        		<h3>Explore <strong>Engeland</strong></h3>
 	        		<hr />
 	        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
