layout website en vulling website

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -1,31 +1,73 @@
 
-	<div class="popTravel text-center">
-		<div class="container">
-	        <div class="row intro-title">
-	        	<div class="col-lg-12">
-	        		<h1 class="smaller">Meest populaire bestemmingen</h1>
+
+	<header ng-include="'pages/header.html'"></header> 
+	
+
+
+		<div class="container-fluid">
+
+			<div class="row">
+				<div class="col-lg-12 mainTasks">
+		        	<div class="container">		
+			        	<div class="col-lg-4 col-md-4 col-xs-12">
+			        		<div class="infoBlock">
+			        			<h2 class="thin"><i class="fa fa-compass"></i>
+			        			Ontdek landen</h2>
+			        			<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec.</p>
+			        		</div>
+			        	</div>
+			        	<div class="col-lg-4 col-md-4 col-xs-12">
+			        		<div class="infoBlock">
+			        			<h2 class="thin"><i class="fa fa-info-circle"></i>
+			        			Vind informatie</h2>
+			        			<p>Ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
+			        		</div>
+			        	</div>
+			        	<div class="col-lg-4 col-md-4 col-xs-12">
+			        		<div class="infoBlock">
+			        			<h2 class="thin"><i class="fa fa-user"></i>
+			        			Jouw reisprofiel</h2>
+			        			<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam.</p>
+			        		</div>
+			        	</div>
+		        	</div>	
+		        </div>	
+	        </div>	
+
+
+	        <div class="row">
+	        	<div class="col-lg-12 intro-title">
+	        		<div class="container">
+	        			<h1 class="smaller">Meest populaire bestemmingen</h1>
+	        		</div>	
 	        	</div>
 	        </div>	
-	        <div class="row">		
-	        	<div class="col-lg-4 col-md-4 col-xs-12 topThree">
-	        		<img src="images/circles/amerikaCircle.png" width="275">
-	        		<h3>Explore <strong>Amerika</strong></h3>
-
-	        		<hr />
-	        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
-	        	</div>
-	        	<div class="col-lg-4 col-md-4 col-xs-12 topThree">
-	        		<img src="images/circles/canadaCircle.png" width="275">
-	        		<h3>Explore <strong>Canada</strong></h3>
-	        		<hr />
-	        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
-	        	</div>
-	        	<div class="col-lg-4 col-md-4 col-xs-12 topThree">
-	        		<img src="images/circles/engelandCircle.png" width="275">
-	        		<h3>Explore <strong>Engeland</strong></h3>
-	        		<hr />
-	        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
-	        	</div>
+	        <div class="row">
+	        	<div class="container">		
+		        	<div class="col-lg-4 col-md-4 col-xs-12 topThree text-center">
+		        		<img src="images/circles/amerikaCircle.png" width="275">
+		        		<div class="topTheetext">
+			        		<h3 class="thin">Explore <strong>Amerika</strong></h3>
+			        		<hr />
+			        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
+		        		</div>
+		        	</div>
+		        	<div class="col-lg-4 col-md-4 col-xs-12 topThree text-center">
+		        		<img src="images/circles/canadaCircle.png" width="275">
+		        		<div class="topTheetext">
+			        		<h3 class="thin">Explore <strong>Canada</strong></h3>
+			        		<hr />
+			        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
+			        	</div>	
+		        	</div>
+		        	<div class="col-lg-4 col-md-4 col-xs-12 topThree text-center">
+		        		<img src="images/circles/engelandCircle.png" width="275">
+		        		<div class="topTheetext">
+			        		<h3 class="thin">Explore <strong>Engeland</strong></h3>
+			        		<hr />
+			        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
+		        		</div>
+		        	</div>
+	        	</div>	
 	        </div>	
 	    </div>    
-    </div>
