--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
 <meta name="viewport"  content="initial-scale=1, width=device-width">
 <link rel="stylesheet" href="bootstrap/css/bootstrap.css">
 <link rel="stylesheet" href="css/style.css">
+
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
 <link rel="shortcut icon" href="">
 
 <!-- Angular scripts -->
@@ -28,70 +30,21 @@
 
 </head>
 <body ng-controller="mainController">
-  <div class="container-fluid">
-      <div class="row">
-          <div class="col-lg-12">
-              <nav class="navbar navbar-default navbar-fixed-top">
-                  <div class="top-nav">
-                      <div class="row">
-                          <div class="col-lg-12">
-                              <div class="container">
-                                  <img src="images/love.png" class="img-top" width="35" height"35" alt="lovenz" /><h2>Traveling</h2>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="container">
-                      <div class="navbar-header">
-                          <a class="navbar-brand" href="#">Explore the world!</a>
-                      </div>
-                      <ul class="nav navbar-nav navbar-right">
-                          <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
-                          <li><a href="#inlogform"><i class="fa fa-shield"></i> Inloggen</a></li>
-                          <li><a href="#landen"><i class="fa fa-comment"></i> Landen</a></li>
-                          <li><a href="#contact"><i class="fa fa-comment"></i> Contact</a></li>
-                      </ul>
-                  </div>  
-              </nav>
-          </div>    
-      </div>    
-              
-      <div class="row">
-          <div class="col-md-12 header">
-              <header>
-                  <div class="container">
-                      <div class="information">
-                          <h1>Een platform vol met reis-<br />
-                          informatie</h1>
 
-                          <div class="informationAbout">
-                              Ontdek de wereld vanaf je bureau en<br />
-                              bepaal wat jou volgende bestemming zal zijn.
-                          </div>
-                          <div class="becomeAMember btn btn-success"> <a href="#inlogform">Word lid van Travel Explorer</a></div>
-                      </div>
-                  </div>
-              </header>
-          </div>  
-      </div>
-
-      <div class="row">
-          <div class="col-lg-12">
-              <div id="main">
-                  <div ng-view>
-                      <!-- html pagina's worden hier geladen -->
-                  </div>
-              </div>  
-          </div>  
-      </div>
+  <div ng-view>
+      <!-- html pagina's worden hier geladen -->
+  </div>  
       
+  <div class="container-fluid">    
       <div class="row"> 
-          <div class="col-lg-12">
+          <div class="col-lg-12 footer">
               <footer>
-                  <h3>Frank Polman</h3>
+                  <div class="container">
+                  </div>
               </footer>
           </div>         
       </div>
   </div>  
+
 </body>
 </html>
