--- a/public/pages/inlogform.html
+++ b/public/pages/inlogform.html
@@ -1,18 +1,46 @@
 
-	<div class="register">
-        <h1>Registreren</h1>
+	<header ng-include="'pages/subPageHeader.html'"></header> 
 
-        <p>{{ message }}</p>
+	<div class="container-fluid">    
+      	<div class="row"> 
+          	<div class="col-lg-12 login">
+				<div class="loginForm">
+			        <h3 class="thin">Login via je bestaande account</h3>
+			        <form id="inlogForm">
+					  <div class="form-group">
+					    <label for="username">Username</label>
+					    <input type="text" ng-model="login.username">
+					  </div>
+					  <div class="form-group">
+					    <label for="password">Password</label>
+					    <input type="text" ng-model="login.password">
+					  </div>
+					  <button type="submit" class="btn btn-default" ng-click="login()">Inloggen</button>
+					</form>
+				</div>	
+			</div>
+		</div>
+	</div>			
 
-        <form>
-		  <div class="form-group">
-		    <label for="username">Username</label>
-		    <input type="text" ng-model="data.username">
-		  </div>
-		  <div class="form-group">
-		    <label for="password">Password</label>
-		    <input type="text" ng-model="data.password">
-		  </div>
-		  <button type="submit" class="btn btn-default" ng-click="register()">Registreren</button>
-		</form>
-    </div>
+
+
+	<div class="container-fluid">    
+      	<div class="row"> 
+          	<div class="col-lg-12 register">	
+				<div class="registerForm">
+			        <form id="registrationForm">
+			          <h3 class="thin">Of maak een nieuw account</h3>
+					  <div class="form-group">
+					    <label for="username">Username</label>
+					    <input type="text" ng-model="data.username">
+					  </div>
+					  <div class="form-group">
+					    <label for="password">Password</label>
+					    <input type="text" ng-model="data.password">
+					  </div>
+					  <button type="submit" class="btn btn-default" ng-click="register()">Registreren</button>
+					</form>
+			    </div>
+			</div>
+		</div>
+	</div>		    
