--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -38,7 +38,7 @@
 	        <div class="row">
 	        	<div class="col-lg-12 intro-title">
 	        		<div class="container">
-	        			<h1 class="smaller">Meest populaire bestemmingen</h1>
+	        			<h2 class="thin">Meest populaire bestemmingen</h1>
 	        		</div>	
 	        	</div>
 	        </div>	
