--- a/public/pages/landen.html
+++ b/public/pages/landen.html
@@ -1,10 +1,19 @@
     <header ng-include="'pages/subPageHeader.html'"></header>
 
-    <div class="jumbotron text-center">
-        <h1>Landen</h1>
 
+    	<div class="container-fluid">    
+      		<div class="row"> 
+          		<div class="col-lg-12 login">
+          			<div class="container">
+        				<h2 class="thin">Ontdek landen</h2>
+        			</div>	
+        		</div>
+        	</div>
+        </div>			
+
+
+        <!--
         <p>Voeg een land toe</p>
-
         <form>
 		  <div class="form-group">
 		    <label for="landen">Landen</label>
@@ -12,11 +21,31 @@
 		  </div>
 		  <button type="submit" class="btn btn-default" ng-click="addLand()">Land toevoegen</button>
 		</form>
+		-->
 
 
-		<table class="table">
+		<div class="container-fluid">
+			<div class="row showLand" ng-repeat="land in landen">
+				<div class="col-lg-12">
+					<div class="container">
+						<div class="col-lg-4 col-md-4 col-xs-12">
+							<div class="countryID">
+								<img src="images/canada.jpg" width="200">
+							</div>	
+						</div>
+						<div class="col-lg-8 col-md-8 col-xs-12">
+							<div class="countryName">
+								<h2 class="thin">{{land.landnaam}}</h2>
+								<p>{{land.omschrijving}}</p>
+							</div>	
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>		
+
+		<!--<table class="table">
 		    <tr ng-repeat="land in landen">
 		        <td>{{land.landnaam}}</td><td><button class="submit" ng-click="delete(land.id)">delete</button></td>
 		    </tr>
-		</table>
-    </div>
+		</table> -->
