--- a/public/pages/landen.html
+++ b/public/pages/landen.html
@@ -3,9 +3,9 @@
 
     	<div class="container-fluid">    
       		<div class="row"> 
-          		<div class="col-lg-12 login">
+          		<div class="col-lg-12 ontdekken">
           			<div class="container">
-        				<h2 class="thin">Ontdek landen</h2>
+        				<h2 class="thin">Ontdekken</h2>
         			</div>	
         		</div>
         	</div>
@@ -30,7 +30,7 @@
 					<div class="container">
 						<div class="col-lg-4 col-md-4 col-xs-12">
 							<div class="countryID">
-								<img src="images/canada.jpg" width="200">
+								<img src="images/canada.jpg" width="300">
 							</div>	
 						</div>
 						<div class="col-lg-8 col-md-8 col-xs-12">
@@ -38,6 +38,8 @@
 								<h2 class="thin">{{land.landnaam}}</h2>
 								<p>{{land.omschrijving}}</p>
 							</div>	
+							<br />
+							<div class="landInfo btn btn-primary"><a href="#">Meer informatie</a></div>
 						</div>
 					</div>
 				</div>
