--- a/public/pages/landInfo.html
+++ b/public/pages/landInfo.html
@@ -1,11 +1,12 @@
-    <header ng-include="'pages/subPageHeader.html'"></header>
+	<header ng-include="'pages/subPageHeader.html'"></header>
 
 
     	<div class="container-fluid">    
       		<div class="row"> 
           		<div class="col-lg-12 ontdekken">
           			<div class="container">
-        				<h2 class="thin">Ontdekken</h2>
+        				<h2 class="thin">Landnaam</h2>
+        				<p>{{land.omschrijving}}</p>
         			</div>	
         		</div>
         	</div>
@@ -24,7 +25,7 @@
 		-->
 
 
-		<div class="container-fluid">
+		<!-- <div class="container-fluid">
 			<div class="row showLand" ng-repeat="land in landen">
 				<div class="col-lg-12">
 					<div class="container">
@@ -39,12 +40,12 @@
 								<p>{{land.omschrijving}}</p>
 							</div>	
 							<br />
-							<div class="landInfo btn btn-primary" ng-click="singleLand(land.id)"><a href="#landInfo">Meer informatie</a></div>
+							<div class="landInfo btn btn-primary"><a href="#">Meer informatie</a></div>
 						</div>
 					</div>
 				</div>
 			</div>
-		</div>		
+		</div> -->		
 
 		<!--<table class="table">
 		    <tr ng-repeat="land in landen">
