--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,13 @@
 <!-- angular views en directives -->
 <script src="js/app.js"></script>
 
+<!-- controllers -->
 <script src="controllers/mainController.js"></script>
 <script src="controllers/landController.js"></script>
+<script src="controllers/singleLandController.js"></script>
+
+<!-- services -->
+<script src="services/landenService.js"></script>
 
 
 <!-- jquery scripts, voor slideshow -->
