--- a/public/pages/landInfo.html
+++ b/public/pages/landInfo.html
@@ -6,7 +6,7 @@
           		<div class="col-lg-12 ontdekken">
           			<div class="container">
         				<h2 class="thin">Landnaam</h2>
-        				<p>{{land.omschrijving}}</p>
+        				<p>{{scope.land.landnaam}}</p>
         			</div>	
         		</div>
         	</div>
