--- a/public/pages/landInfo.html
+++ b/public/pages/landInfo.html
@@ -6,11 +6,14 @@
           		<div class="col-lg-12 ontdekken">
           			<div class="container">
         				<h2 class="thin">Landnaam</h2>
-        				<p>{{scope.land.landnaam}}</p>
+        				<p>Hier komt de landnaam: {{land.landnaam}}</p>
+        				<p>omschrijving: {{land.omschrijving}}</p>
+        				<p>Hier komt de ID: {{deID}}</p>
         			</div>	
         		</div>
         	</div>
-        </div>			
+        </div>		
+
 
 
         <!--
