user ingelogd pagina aanmaken + controller

--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -49,7 +49,7 @@
 		        		<div class="topTheetext">
 			        		<h3 class="thin">Explore <strong>Amerika</strong></h3>
 			        		<hr />
-			        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
+			        		<p>De uitgestrekte staten van Amerika lenen zich goed voor een fly drive met een huurauto. Of u nu wilt relaxen op de witte stranden van Florida of de bezienswaardigheden van New York wilt bekijken, tijdens een rondreis door Amerika is het allemaal mogelijk. De huurauto kunt u onderweg verruilen voor de wandelschoenen en bijvoorbeeld een tocht maken door het rode woestijnlandschap van Bryce Canyon National Park.</p>
 		        		</div>
 		        	</div>
 		        	<div class="col-lg-4 col-md-4 col-xs-12 topThree text-center">
@@ -57,7 +57,7 @@
 		        		<div class="topTheetext">
 			        		<h3 class="thin">Explore <strong>Canada</strong></h3>
 			        		<hr />
-			        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
+			        		<p>Tijdens een rondreis Canada kunt u de ruige natuur van het op een na grootste land ter wereld induiken. Rijd met uw huurauto langs de met sneeuw bedekte bergtoppen van de Rocky Mountains en spot grizzly’s in Banff National Park in West-Canada. Maar het land van ‘the maple leaf’ kent ook multiculturele steden als Toronto en de ‘joie de vivre’ van Montréal. En aan de oostkust kunt u het donderende natuurgeweld van de Niagara Falls ervaren.</p>
 			        	</div>	
 		        	</div>
 		        	<div class="col-lg-4 col-md-4 col-xs-12 topThree text-center">
@@ -65,7 +65,7 @@
 		        		<div class="topTheetext">
 			        		<h3 class="thin">Explore <strong>Engeland</strong></h3>
 			        		<hr />
-			        		<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
+			        		<p>Wie aan Engeland denkt, denkt aan Londen. Niet vreemd, want deze bruisende stad combineert historische pracht met moderne allure. Maar Engeland heeft nog veel meer voor de bezoeker in petto. Breng eens een bezoekje aan het sfeervolle Birmingham waar men schitterende tuinen kan zien of reis af naar Lancashire.</p>
 		        		</div>
 		        	</div>
 	        	</div>	
