--- a/public/pages/inlogform.html
+++ b/public/pages/inlogform.html
@@ -13,9 +13,9 @@
 					  </div>
 					  <div class="form-group">
 					    <label for="password">Password</label>
-					    <input type="text" ng-model="login.password">
+					    <input type="password" ng-model="login.password">
 					  </div>
-					  <button type="submit" class="btn btn-default" ng-click="login()">Inloggen</button>
+					  <a href="#ingelogd" type="submit" class="btn btn-default" ng-click="login()">Inloggen</a>
 					</form>
 				</div>	
 			</div>
@@ -36,7 +36,7 @@
 					  </div>
 					  <div class="form-group">
 					    <label for="password">Password</label>
-					    <input type="text" ng-model="data.password">
+					    <input type="password" ng-model="data.password">
 					  </div>
 					  <button type="submit" class="btn btn-default" ng-click="register()">Registreren</button>
 					</form>
