--- a/public/pages/landInfo.html
+++ b/public/pages/landInfo.html
@@ -5,10 +5,9 @@
       		<div class="row"> 
           		<div class="col-lg-12 ontdekken">
           			<div class="container">
-        				<h2 class="thin">Landnaam</h2>
-        				<p>Hier komt de landnaam: {{land.landnaam}}</p>
-        				<p>omschrijving: {{land.omschrijving}}</p>
-        				<p>Hier komt de ID: {{deID}}</p>
+        				<h2 class="thin">Informatie over {{land.landnaam}}</h2>
+        				<p>{{land.omschrijving}}</p>
+        				<img src="{{land.imgurl}}" />
         			</div>	
         		</div>
         	</div>
