--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
 <script src="controllers/mainController.js"></script>
 <script src="controllers/landController.js"></script>
 <script src="controllers/singleLandController.js"></script>
+<script src="controllers/userController.js"></script>
 
 <!-- services -->
 <script src="services/landenService.js"></script>
