--- a/public/pages/landen.html
+++ b/public/pages/landen.html
@@ -3,9 +3,9 @@
 
     	<div class="container-fluid">    
       		<div class="row"> 
-          		<div class="col-lg-12 ontdekken">
+          		<div class="col-lg-12 intro-title">
           			<div class="container">
-        				<h2 class="thin">Ontdekken</h2>
+        				<h2 class="thin">Ontdek prachtige landen</h2>
         			</div>	
         		</div>
         	</div>
@@ -26,10 +26,11 @@
 		<div class="container-fluid">
 			<div class="row showLand" ng-repeat="land in landen">
 				<div class="col-lg-12">
-					<div class="container">
+					<div class="container landen">
 						<div class="col-lg-4 col-md-4 col-xs-12">
 							<div class="countryID">
-								<img src="images/canada.jpg" width="300">
+								<!-- <img src="images/canada.jpg" width="300"> -->
+								<img src="images/circles/canadaCircle.png" width="200">
 							</div>	
 						</div>
 						<div class="col-lg-8 col-md-8 col-xs-12">
@@ -41,6 +42,7 @@
 							<div class="landInfo btn btn-primary" ng-click="singleLand(land.id)"><a href="#landInfo">Meer informatie</a></div>
 						</div>
 					</div>
+					<hr />
 				</div>
 			</div>
 		</div>		
