--- a/public/pages/ingelogd.html
+++ b/public/pages/ingelogd.html
@@ -4,7 +4,7 @@
       	<div class="row"> 
           	<div class="col-lg-12 intro-title">
 				<div class="container">
-			        <h3 class="thin">Welkom user</h3>
+			        <h3 class="thin">Welkom {{user.Naam}}</h3>
 				</div>	
 			</div>
 		</div>
