--- a/public/pages/landen.html
+++ b/public/pages/landen.html
@@ -27,10 +27,11 @@
 			<div class="row showLand" ng-repeat="land in landen">
 				<div class="col-lg-12">
 					<div class="container landen">
-						<div class="col-lg-4 col-md-4 col-xs-12">
+						<div class="col-lg-4 col-md-4 col-xs-12 land-img">
 							<div class="countryID">
 								<!-- <img src="images/canada.jpg" width="300"> -->
-								<img src="images/circles/canadaCircle.png" width="200">
+
+								<img src="{{land.imgurl}}" width="200">
 							</div>	
 						</div>
 						<div class="col-lg-8 col-md-8 col-xs-12">
