--- a/public/pages/ingelogd.html
+++ b/public/pages/ingelogd.html
@@ -5,6 +5,17 @@
           	<div class="col-lg-12 intro-title">
 				<div class="container">
 			        <h3 class="thin">Welkom {{user.Naam}}</h3>
+
+			        <form id="userForm">
+						<div class="form-group">
+					    	<label for="username">Gebruikersnaam</label>
+					    	<input type="text" placeholder="{{user.Naam}}" ng-model="login.username">
+					  	</div>
+					  	<div class="form-group">
+					    	<label for="password">Geboorte datum</label>
+					    	<input type="password" placeholder="{{user.Naam}}" ng-model="login.birthday">
+					  	</div>
+					</form>
 				</div>	
 			</div>
 		</div>
