--- a/public/pages/ingelogd.html
+++ b/public/pages/ingelogd.html
@@ -1,22 +1,60 @@
 <header ng-include="'pages/subPageHeader.html'"></header>
 
 	<div class="container-fluid">    
-      	<div class="row"> 
-          	<div class="col-lg-12 intro-title">
-				<div class="container">
-			        <h3 class="thin">Welkom {{user.Naam}}</h3>
+      	<div class="row user-info"> 
+			<div class="container">
+
+				<div class="col-lg-6">
+			        <h2 class="thin">Welkom {{user.gebruikersnaam}}</h2>
 
 			        <form id="userForm">
 						<div class="form-group">
 					    	<label for="username">Gebruikersnaam</label>
-					    	<input type="text" placeholder="{{user.Naam}}" ng-model="login.username">
+					    	<input type="text" placeholder="{{user.gebruikersnaam}}" ng-model="user.gebruikersnaam">
+					  	</div>
+					  	<div class="form-group">
+					    	<label for="firstname">Voornaam</label>
+					    	<input type="text" placeholder="{{user.voornaam}}" ng-model="user.voornaam">
+					  	</div>
+					  	<div class="form-group">
+					    	<label for="lastname">Achternaam</label>
+					    	<input type="text" placeholder="{{user.achternaam}}" ng-model="user.achternaam">
 					  	</div>
 					  	<div class="form-group">
 					    	<label for="password">Geboorte datum</label>
-					    	<input type="password" placeholder="{{user.Naam}}" ng-model="login.birthday">
+					    	<input type="text" placeholder="{{user.geboortedatum}}" ng-model="user.geboortedatum">
 					  	</div>
+					  	<a href="" type="submit" class="btn btn-primary" ng-click="updateUser()">Gegevens bewerken</a>
 					</form>
+				</div>
+				<div class="col-lg-6 travel-img">
+					<img src="images/circles/love-traveling.png" width="200" height="200" />
 				</div>	
 			</div>
 		</div>
-	</div>	
+		<div class="row">
+			<div class="col-lg-12 countryOverview">
+				<div class="container">
+					<h2 class="thin">Deze landen heeft {{user.gebruikersnaam}} bezocht</h2>
+					<div class="col-lg-4 col-md-4 col-xs-12" ng-repeat="land in landenVisited">
+						<div class="myCountries">
+							<img src="images/globe.png" />
+
+							<hr />
+
+							<h2 class="thin">{{land.landnaam}}</h2>
+							<p>{{land.recentie}}</p>
+						</div>	
+					</div>
+				</div>	
+			</div>
+			<div class="col-lg-12">
+				<div class="container">
+					<a href="" type="submit" class="btn btn-primary" ng-click="addCountry()">Land toevoegen</a>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	
+			
