--- a/public/pages/ingelogd.html
+++ b/public/pages/ingelogd.html
@@ -38,20 +38,38 @@
 					<h2 class="thin">Deze landen heeft {{user.gebruikersnaam}} bezocht</h2>
 					<div class="col-lg-4 col-md-4 col-xs-12" ng-repeat="land in landenVisited">
 						<div class="myCountries">
+							<div class="delButton">
+								<button class="btn btn-danger" ng-click="deleteVisitedCountry(land.idgebruikerslanden)"><span class="glyphicon glyphicon-remove" aria-hidden="true"></span></button>
+							</div>	
 							<img src="images/globe.png" />
 
 							<hr />
 
 							<h2 class="thin">{{land.landnaam}}</h2>
-							<p>{{land.recentie}}</p>
+							<p>{{land.omschrijving}}</p>
+						</div>	
+					</div>
+					<div class="col-lg-4 col-md-4 col-xs-12">
+						<div class="addMyCountries">
+							<img src="images/globe.png" />
+
+							<hr />
+
+							<h2 class="thin">Nieuw land ontdekt?</h2>
+							<form id="registrationForm">
+							  <div class="form-group">
+							    <label for="landnaam">Landnaam</label>
+							    <input type="text" ng-model="data.landnaam">
+							  </div>
+							  <div class="form-group">
+							    <label for="landInfo">Informatie</label>
+							    <textarea name="text-area" rows="8" ng-model="data.omschrijving"></textarea>
+							  </div>
+							  <button type="submit" class="btn btn-primary" ng-click="addVisitedCountry()">Land toevoegen</button>
+							</form>
 						</div>	
 					</div>
 				</div>	
-			</div>
-			<div class="col-lg-12">
-				<div class="container">
-					<a href="" type="submit" class="btn btn-primary" ng-click="addCountry()">Land toevoegen</a>
-				</div>
 			</div>
 		</div>
 	</div>
