--- a/public/pages/landInfo.html
+++ b/public/pages/landInfo.html
@@ -28,7 +28,46 @@
 	        		</div>	
         		</div>	
         	</div>
-        </div>		
+	   
+      		<div class="row gebruikersReacties"> 
+          		<div class="container">
+          			<div class="col-lg-12">
+          				<h2 class="thin">Activiteiten van andere gebruikers</h2>
+          				<div class="gebruikersActiviteit" ng-repeat="recentie in recenties">
+		          			<h3 class="thin">Gebruiker: {{recentie.gebruikersnaam}}</h3>
+		          			<p>Activiteit: {{recentie.naamActiviteit}}</p>
+		          			<p>{{recentie.omschrijving}}</p>
+		          			<hr class="grey" />
+		          		</div>	
+	        		</div>	
+
+	        		<!--
+	        		<div class="col-lg-12">
+						<div class="addActivity">
+							<h2 class="thin">Ook een activiteit toevoegen?</h2>
+							<form id="activityForm">
+							  <div class="form-group">
+							    <label for="gebruikersnaam">Gebruikersnaam</label>
+							    <input type="text" ng-model="data.gebruikersnaam">
+							  </div>
+							  <div class="form-group">
+							    <label for="activiteitenNaam">Naam activiteit</label>
+							    <input type="text" ng-model="data.activiteitenNaam">
+							  </div>
+							  <div class="form-group">
+							    <label for="activityInfo">Informatie</label>
+							    <textarea name="text-area" rows="8" ng-model="data.omschrijving"></textarea>
+							  </div>
+							  <button type="submit" class="btn btn-primary" ng-click="addActivity()">Activiteit toevoegen</button>
+							</form>
+						</div>	
+					</div>
+
+					-->
+        		</div>	
+        	</div>
+        </div>	
+
 
 
 
