--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -13,21 +13,21 @@
 			        		<div class="infoBlock">
 			        			<h2 class="thin"><i class="fa fa-compass"></i>
 			        			Ontdek landen</h2>
-			        			<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam ultricies nec.</p>
+			        			<p>Bekijk het profiel van andere gebruikers en ontdek waar zij allemaal geweest zijn. De wereld kent erg veel mooie plekken, ontdek ze!</p>
 			        		</div>
 			        	</div>
 			        	<div class="col-lg-4 col-md-4 col-xs-12">
 			        		<div class="infoBlock">
 			        			<h2 class="thin"><i class="fa fa-info-circle"></i>
 			        			Vind informatie</h2>
-			        			<p>Ac ultrices diam ultricies nec. Quisque vestibulum nulla at metus molestie, sed convallis turpis mollis. Nullam ac dolor sed urna tincidunt venenatis.</p>
+			        			<p>Vind informatie over de landen waarin je geinteresseerd bent geraakt, of raak geinteresseerd in landen door aangeboden informatie!</p>
 			        		</div>
 			        	</div>
 			        	<div class="col-lg-4 col-md-4 col-xs-12">
 			        		<div class="infoBlock">
 			        			<h2 class="thin"><i class="fa fa-user"></i>
 			        			Jouw reisprofiel</h2>
-			        			<p>Aliquam erat volutpat. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Pellentesque varius placerat orci, ac ultrices diam.</p>
+			        			<p>Laat anderen meegenieten van jouw reisprofiel. Laat weten waar je geweest bent en wat je er van vond! Samen weten we meer!</p>
 			        		</div>
 			        	</div>
 		        	</div>	
