--- a/public/pages/inlogform.html
+++ b/public/pages/inlogform.html
@@ -15,7 +15,7 @@
 					    <label for="password">Wachtwoord</label>
 					    <input type="password" ng-model="login.password">
 					  </div>
-					  <a href="#ingelogd" type="submit" class="btn btn-default" ng-click="login()">Inloggen</a>
+					  <a href="#ingelogd" type="submit" class="btn btn-primary" ng-click="login()">Inloggen</a>
 					</form>
 				</div>	
 			</div>
@@ -50,7 +50,7 @@
 					    <label for="wachtwoord">Wachtwoord</label>
 					    <input type="password" ng-model="data.wachtwoord">
 					  </div>
-					  <button type="submit" class="btn btn-default" ng-click="register()">Registreren</button>
+					  <button type="submit" class="btn btn-primary" ng-click="register()">Registreren</button>
 					</form>
 			    </div>
 			</div>
