bezig met recensie functie

--- a/public/pages/header.html
+++ b/public/pages/header.html
@@ -20,7 +20,7 @@
                           <li><a href="#">Home</a></li>
                           <li><a href="#inlogform">Inloggen</a></li>
                           <li><a href="#landen">Landen</a></li>
-                          <li><a href="#contact">Contact</a></li>
+                          <!-- <li><a href="#contact">Contact</a></li> -->
                       </ul>
                   </div>  
               </nav>
